Syncing semantic persistence code