@@ -52,6 +52,11 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
+      <dependency>
+          <groupId>gov.nist.scap.content</groupId>
+          <artifactId>eXist-db-persistence</artifactId>
+          <scope>test</scope>
+      </dependency>
   <dependency>
     	<groupId>org.openrdf.sesame</groupId>
 		<artifactId>sesame-repository-api</artifactId>
@@ -97,6 +102,7 @@
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
+      
   </dependencies>
   <build>
     <plugins>
@@ -107,7 +113,115 @@
           <argLine>-Xms256m -Xmx512m -Xss2m</argLine>
         </configuration>
       </plugin>
+        <plugin>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+                <execution>
+                    <phase>process-resources</phase>
+                    <goals>
+                        <goal>copy</goal>
+                    </goals>
+                    <configuration>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>xml-resolver</groupId>
+                                <artifactId>xml-resolver</artifactId>
+                                <version>1.2</version>
+                                <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                            </artifactItem>
+                            <artifactItem>
+                                <groupId>saxonhe</groupId>
+                                <artifactId>saxonhe</artifactId>
+                                <version>9.2.1.5</version>
+                                <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                            </artifactItem>
+                            <artifactItem>
+                                <groupId>xalan</groupId>
+                                <artifactId>serializer</artifactId>
+                                <version>2.7.1</version>
+                                <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                            </artifactItem>
+                            <artifactItem>
+                                <groupId>xalan</groupId>
+                                <artifactId>xalan</artifactId>
+                                <version>2.7.1</version>
+                                <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                            </artifactItem>
+                            <artifactItem>
+                                <groupId>xerces</groupId>
+                                <artifactId>xercesImpl</artifactId>
+                                <version>2.11.0</version>
+                                <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                            </artifactItem>
+                            <artifactItem>
+                                <groupId>xml-apis</groupId>
+                                <artifactId>xml-apis</artifactId>
+                                <version>1.4.01</version>
+                                <outputDirectory>${project.build.directory}/endorsed</outputDirectory>
+                            </artifactItem>
+                        </artifactItems>
+                    </configuration>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+                <argLine>-Djava.endorsed.dirs="${project.build.directory}/endorsed" -Dexist.home="${project.build.directory}/classes"</argLine>
+            </configuration>
+        </plugin>
+        <plugin>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>2.4</version>
+            <executions>
+                <execution>
+                    <phase>process-resources</phase>
+                    <goals>
+                        <goal>unpack-dependencies</goal>
+                    </goals>
+                    <configuration>
+                        <includeArtifactIds>eXist-db-persistence</includeArtifactIds>
+                        <includes>conf.xml,exist-data/**/*</includes>
+                        <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                    </configuration>
+                </execution>
+            </executions>
+            <configuration>
+                <argLine>-Djava.endorsed.dirs="${project.build.directory}/endorsed" -Dexist.home="${project.build.directory}/classes"</argLine>
+            </configuration>
+        </plugin>
+        
     </plugins>
+      <pluginManagement>
+          <plugins>
+              <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+              <plugin>
+                  <groupId>org.eclipse.m2e</groupId>
+                  <artifactId>lifecycle-mapping</artifactId>
+                  <version>1.0.0</version>
+                  <configuration>
+                      <lifecycleMappingMetadata>
+                          <pluginExecutions>
+                              <pluginExecution>
+                                  <pluginExecutionFilter>
+                                      <groupId>org.apache.maven.plugins</groupId>
+                                      <artifactId>maven-dependency-plugin</artifactId>
+                                      <versionRange>[2.1,)</versionRange>
+                                      <goals>
+                                          <goal>copy</goal>
+                                          <goal>unpack-dependencies</goal>                                          
+                                      </goals>
+                                  </pluginExecutionFilter>
+                                  <action>
+                                      <ignore></ignore>
+                                  </action>
+                              </pluginExecution>
+                          </pluginExecutions>
+                      </lifecycleMappingMetadata>
+                  </configuration>
+              </plugin>
+          </plugins>
+      </pluginManagement>
   </build>
 
   <reporting>
